[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "provena"
version = "0.2.0"
description = "Provena — Epistemic provenance for AI agents"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
databricks = [
    "databricks-sdk>=0.20.0",
    "databricks-vectorsearch>=0.40",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
]
all = ["provena[databricks]"]

[tool.hatch.build.targets.wheel]
packages = ["src/provena"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
